# wasmedge-bindgen

./: .gitignore  diff
host/: diff
host/rust-wasmedge-sdk/: Cargo.toml
host/rust-wasmedge-sdk/src/: lib.rs
test/BindgenFuncs/host/rust/: Cargo.toml
test/BindgenFuncs/host/rust/src/: main.rs
