[package]
name = "bindgen-funcs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#wasmedge-sys = "0.7.0"
#wasmedge-sdk = "0.1.0"
wasmedge-sdk = { path = "/home/cat/.cargo/registry/src/github.com-1ecc6299db9ec823/wasmedge-sdk-0.1.0" }
rust-wasmedge-bindgen-sdk = { path = "../../../../host/rust-wasmedge-sdk" }